tests/error/zero.py
print 'Start'
0/0
print 'End'
